Updated Readme file

--- a/README
+++ b/README
@@ -1,15 +1,29 @@
-# Project Name
+# Stripe Payment Integration Project
 
 ## Description
 
-A brief description of the project goes here.
+This project demonstrates how to integrate Stripe payments in a web application. It uses Node.js along with environment variables to securely handle your Stripe secret key. You can run the development server and test the checkout functionality using the `checkout.html` file.
 
-## Installation
+## Setup Instructions
 
-1. Clone the repository or download the source code.
-2. Install the necessary dependencies by running the following command in the project directory:
+### 1. Clone the Repository
+
+First, clone the repository and navigate into the project directory:
+
+### 2. Set ENV File (.env)
+
+Create .env file in root directory
+
+STRIPE_SECRET_KEY=sk_test\*\*\*\*
+
+### 3. Install Dependency and Run
 
 ```bash
 npm install
 npm run dev
 ```
+
+### 4. Open the Checkout Page
+
+You can access and test the checkout functionality by either:
+Opening the checkout.html file directly in your browser, or Using the Live Server extension in your code editor (like Visual Studio Code) to serve the file and view it in the browser.
